--- a/style.css
+++ b/style.css
@@ -110,10 +110,17 @@ html {
     flex-direction: column;
     justify-content: space-around;
     color: white;
-    display: none;
+    visibility: hidden;
+
+}
+@keyframes animate {
+    from {top:-320px; opacity:0}
+    to {top:0; opacity:1}
 }
 .active{
-    display: flex;
+    visibility: visible;
+    animation-name: animate;
+    animation-duration: 0.5s
 }
 .modal__finish-buttons {
     list-style: none;
@@ -133,4 +140,7 @@ html {
     font-size: 2rem;
     font-weight: bold;
     border-radius: 3rem;
+    cursor: pointer;
+    border-color: #ffffff;
+    border-width: 4px;
 }
