change style result-list

--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ html {
     visibility: visible;
     background-color:rgba(27, 143, 185, 0);
     justify-content: start;
-    padding-bottom: 30px;
+    padding:60px 20px 30px;
 }
 .score-element{
     list-style: none;
@@ -128,9 +128,9 @@ html {
     margin-bottom: 20px;
 }
 .result-buttons button{
-    font-size: 1.7rem;
+    font-size: 2rem;
 
-    padding: 0;
+    padding: 7px;
 }
 @keyframes animate {
     from {top:-320px; opacity:0}
@@ -197,4 +197,5 @@ html {
     .result-buttons button{
 font-size: 3vw;
     }
+
 }
